--- a/styles.css
+++ b/styles.css
@@ -1,159 +1,34 @@
-html {
-  background-image: url(img/bogota.jpeg);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  height: 100vh;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(
-    0,
-    0,
-    0,
-    0.2
-  ); /* Ajusta la transparencia según tus necesidades */
-  z-index: -1;
-}
-
-#blur {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 970px;
-  height: 500px;
-  backdrop-filter: blur(20px);
-  border-radius: 15px;
-}
-
-#logo {
-  display: flex;
-  width: 350px;
-  margin-top: -50px;
-}
-
-.title {
-  display: flex;
-  color: #fff;
-  font-family: "Barlow", sans-serif;
-  font-size: 50px;
-  margin-bottom: 0;
-}
-
-.paragraph {
-  display: flex;
-  top: -20px;
-  width: 80%;
-  color: #fff;
-  font-family: "Roboto", sans-serif;
-  font-size: 18px;
-  text-align: center;
-}
-
-.countdown {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  column-gap: 20px;
-  position: absolute;
-  background-color: #2c4b78;
-  width: 400px;
-  height: 100px;
-  top: 75%;
-  left: 50%;
-  transform: translate(-50%, -75%);
-  border-radius: 15px;
-}
-
-span {
-  color: #fff;
-  font-family: "Barlow", sans-serif;
-  font-size: 35px;
-}
-
-/* .csoon_backgroundImg {
-  height: 100vh;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-
-.csoon_container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.csoon_blur {
-  width: 970px;
-  height: 470px;
-  backdrop-filter: blur(20px) brightness(85%);
-  border-radius: 15px;
-  padding-top: 40px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
-}
-
-.csoon_logo {
-  width: 350px;
-}
-
-.csoon_title {
-  font-size: 50px;
-  margin-bottom: 0;
-  color: #fff;
-  font-family: "Barlow", sans-serif;
-}
-
-.csoon_paragraph {
-  top: -20px;
-  width: 80%;
-  font-size: 18px;
-  color: #fff;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
-}
-
-.csoon_countdown {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  column-gap: 20px;
-  background-color: #3d8aff;
-  width: 400px;
-  height: 100px;
-  transform: translatey(68px);
-  border-radius: 15px;
-}
-.csoon_countS {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.csoon_N {
-  color: #fff;
-  font-family: "Barlow", sans-serif;
-  font-size: 35px;
-}
-.csoon_countP {
+* {
   margin: 0;
-  font-size: 12px;
-  font-family: "Roboto", sans-serif;
-} */
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+  height: 100px;
+  padding: 40px 100px;
+}
+
+.links-container > ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+}
+
+.Button {
+  width: 170px;
+  height: 60px;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  background-color: #e68a1f;
+}
